# ECF-System

./: .gitignore  README.md  index.html  package-lock.json  package.json  requirements-dev.txt  requirements.txt  setup.cfg  setup_env.sh
.github/workflows/: lintJS.yml  lintPy.yml
report/: myReport.tex  mybibliography.bib
report/chapters/: abstract.tex  acknowledgements.tex  appendixA.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex
src/: App.jsx  index.css
src/ECFSystem/: manage.py
src/ECFSystem/ECF/: apps.py  jwt_manager.py  models.py  serializers.py  tests.py  urls.py  views.py
src/ECFSystem/ECFSystem/: asgi.py  gunicorn_config.py  settings.py  urls.py  wsgi.py
src/ECFSystem/Extenuating/: apps.py  models.py  views.py
src/ECFSystemBackend/: data.json
src/ECFSystemBackend/ECFSystem/: asgi.py  settings.py  urls.py  wsgi.py
src/ECFSystemBackend/Extenuating/: models.py  urls.py  views.py
src/ECFSystemBackend/Extenuating/migrations/: 0001_initial.py
src/components/: AuthContext.jsx  Layout.jsx  config.js
src/components/Form/: Form.css  Form.jsx  FormDetails.css  FormDetails.jsx
src/components/Profile/: Profile.css  Profile.jsx
src/components/common/: PrivateRouteLogin.jsx  PrivateRouteProfile.jsx  Sidebar.css  Sidebar.jsx
src/components/login/: Login.css  Login.jsx  Signup.css  Signup.jsx
