[metadata]
name = ecfsystem
description = ECFSystem web code for deployment to a docker container
author = Joshua Crews
license =
license_files =
platforms = unix, linux, win32, win64
version= 0.0.1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[flake8]
max-line-length = 120